--- a/microservice-config-product.yml
+++ b/microservice-config-product.yml
@@ -17,8 +17,8 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/springcloud_db01?serverTimezone=GMT%2B8 #数据库连接地址，*****注意库名 db01***************
-    username: root
-    password: root
+    username: OA
+    password: admin123
     dbcp2:
       min-idle: 5
       initial-size: 5
@@ -49,8 +49,8 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/springcloud_db02?serverTimezone=GMT%2B8 #数据库连接地址，*****注意库名 db02***************
-    username: root
-    password: root
+    username: OA
+    password: admin123
     dbcp2:
       min-idle: 5
       initial-size: 5
